--- a/08-rock-paper-scissors-2.html
+++ b/08-rock-paper-scissors-2.html
@@ -94,7 +94,11 @@
 
         <p class="js-score score"></p>
 
-        <button onclick="
+        <button onclick="resetScore();"class="reset-button">Reset Score</button>
+    </div>
+    <script>
+
+         function resetScore (){
             score.wins = 0;
             score.losses = 0;
             score.ties = 0;
@@ -103,9 +107,7 @@
         document.querySelector('.js-move').innerHTML = '';
         document.querySelector('.js-result').innerHTML = '';
             alert('Score was reset.')
-        "class="reset-button">Reset Score</button>
-    </div>
-    <script>
+        }
 
         let score = JSON.parse(localStorage.getItem('score')) || {
             wins : 0,
